# apx-agent

./: .gitignore  README.md  ROADMAP-dev-ui.md  pyproject.toml
.github/workflows/: ci.yml
docs/future-work/: databricks-bridge-integration.md
docs/superpowers/plans/: 2026-04-15-connectors-plan.md  2026-04-16-agent-hub-plan.md  2026-04-16-evolutionary-agent-plan.md  2026-04-19-durable-workflows-plan.md  2026-04-22-vision-grounding.md
docs/superpowers/specs/: 2026-04-15-guidepoint-appkit-connectors-design.md  2026-04-16-agent-hub-design.md  2026-04-16-evolutionary-agent-design.md  2026-04-19-durable-workflows-design.md  2026-04-22-phase2-guided-mutation-design.md  2026-04-22-vision-grounding-design.md
examples/: README.md  app.yml  databricks.yml
examples/voynich/: CONTRIBUTING.md  Makefile  README.md  pyproject.toml  voynich_workflow.yml
examples/voynich/agents/critic/: main.py  pyproject.toml
examples/voynich/agents/decipherer/: main.py  pyproject.toml
examples/voynich/agents/orchestrator/: pyproject.toml
examples/voynich/notebooks/: 01_load_corpus.py  02_build_indexes.py  03_review_gate.py
hub/: databricks.yml  main.py  pyproject.toml
hub/frontend/: index.html
hub/src/hub/: app.py  chat.py  discovery.py  models.py  registry.py
hub/tests/: test_app.py  test_chat.py  test_discovery.py  test_models.py  test_registry.py
python/: pyproject.toml
python/examples/: pyproject.toml
python/examples/catalog/: register_agent.py
python/examples/src/explain_my_bill_agent/backend/: router.py
python/examples/voynich/: README.md  schema.sql  voynich_workflow.yml
python/examples/voynich/agents/critic/: app.yaml  apx_agent-0.16.0-py3-none-any.whl  main.py  pyproject.toml
python/examples/voynich/agents/decipherer/: main.py  pyproject.toml
python/examples/voynich/agents/historian/: main.py  pyproject.toml
python/examples/voynich/agents/judge/: app.yaml  main.py  pyproject.toml
python/examples/voynich/agents/orchestrator/: app.yaml  apx_agent-0.16.0-py3-none-any.whl  main.py  pyproject.toml
python/examples/voynich/notebooks/: 01_load_corpus.py  02_build_indexes.py  03_review_gate.py  04_download_folio_images.py  05_vision_analysis.py
python/examples/voynich/scripts/: README.md  __init__.py  eva_sections.py  jakobsen_sa.py  ngram_model.py  run_analysis.py  sa_results.json
python/examples/voynich/tests/: conftest.py  test_loop_agent.py
python/examples/voynich/tests/agents/: test_agent_tools.py
python/src/apx_agent/: __init__.py  _agents.py  _dev.py  _discovery.py  _eval.py  _inspection.py  _mcp.py  _remote.py  _runner.py  _sql.py  _trace.py  _ui_chat.py  _ui_edit.py  _ui_nav.py  _ui_probe.py  _ui_traces.py  _wiring.py  catalog.py  genie.py
python/src/apx_agent/workflow/: __init__.py  cli.py  engine.py  engine_delta.py  engine_memory.py  loop_agent.py  population_store.py
python/tests/: test_agents.py  test_catalog.py  test_defaults.py  test_eval.py  test_eval_judge.py  test_eval_routes.py  test_genie.py  test_probe_checks.py  test_remote.py  test_replay_endpoints.py  test_sql.py  test_trace.py  test_workflow_engine.py
src/apx_agent/: __init__.py  _agents.py  _defaults.py  _dev.py  _discovery.py  _eval.py  _inspection.py  _llm_loop.py  _mcp.py  _models.py  _runner.py  _sql.py  _ui_chat.py  _ui_edit.py  _ui_setup.py  _wiring.py
tests/: conftest.py  test_agent.py  test_defaults.py  test_defaults_new.py  test_eval.py  test_inspection.py  test_llm_loop.py  test_mcp.py  test_models.py  test_wiring.py
tests/explain_my_bill/: app.py
ts/: package-lock.json  package.json  tsconfig.json
ts/examples/basic-agent/: app.ts  esbuild.config.mjs  package.json
ts/examples/pipeline-agent/: app.ts  databricks.yml  package.json  tsconfig.json
ts/examples/voynich/: voynich-config.ts
ts/src/: index.ts
ts/src/agent/: index.ts  mcp-client.ts  plugin.ts  runner.ts  tools.ts
ts/src/connectors/: index.ts  vector-search.ts
ts/src/dev/: index.ts
ts/src/discovery/: index.ts
ts/src/eval/: predict.ts
ts/src/mcp/: index.ts
ts/src/workflows/: handoff.ts  hypothesis.ts  index.ts  loop.ts  pareto.ts  population.ts  router.ts  sequential.ts  session.ts  state.ts  types.ts
ts/templates/databricks-agent/: app.ts  app.yaml  databricks.yml  deploy.sh  package.json  tsconfig.json
ts/tests/: connectors-types.test.ts  dev.test.ts  evolutionary.test.ts  mcp-client.test.ts  population.test.ts  remote.test.ts  state.test.ts  streaming.test.ts  tools.test.ts  workflows.test.ts
typescript/: package-lock.json  package.json
typescript/deploy/voynich-critic/: app.ts  package.json  scoring.ts
typescript/deploy/voynich-decipherer/: app.ts  package.json
typescript/deploy/voynich-grounder/: app.ts  package.json  voynich-config.ts
typescript/deploy/voynich-historian/: app.ts  package.json
typescript/deploy/voynich-judge/: app.ts  package.json
typescript/deploy/voynich-orchestrator/: VOYNICH_NOTES.md  app.ts  backfill-expected-terms.ts  backtest-critic.ts  compare-restart-tokenization.ts  decoder-calibrate.ts  package.json  theory-investigator.ts  theory-loop.ts
typescript/examples/basic-agent/: app.yaml  databricks.yml  deploy.sh  package.json  test-streaming.ts
typescript/examples/pipeline-agent/: app.ts  deploy.sh
typescript/scripts/: build-deploy.sh
typescript/src/: catalog.ts  genie.ts  index.ts  trace.ts
typescript/src/agent/: mcp-client.ts  plugin.ts  request-context.ts  runner.ts  tools.ts
typescript/src/connectors/: doc-parser.ts  index.ts  lakebase.ts  types.ts  vector-search.ts
typescript/src/dev/: index.ts
typescript/src/discovery/: index.ts
typescript/src/eval/: harness.ts  index.ts
typescript/src/mcp/: index.ts
typescript/tests/: catalog.test.ts  connectors-doc-parser.test.ts  connectors-lakebase.test.ts  connectors-vector-search.test.ts  discovery.test.ts  engine-delta.test.ts  engine-memory.test.ts  evolutionary-durable.test.ts  evolutionary.test.ts  genie.test.ts  hypothesis.test.ts  loop-durable.test.ts  mcp-client.test.ts  pareto.test.ts  sequential-durable.test.ts  session.test.ts  trace.test.ts  workflows.test.ts
(+35 files in other folders)
