[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "apx-agent"
version = "0.1.0"
description = "Standalone agent runtime for Databricks Apps — MCP, A2A, /invocations, tool routing"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
dependencies = [
    "fastapi>=0.119.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "databricks-sdk>=0.74.0",
    "httpx>=0.27.0",
    "mcp>=1.0.0",
]

[project.optional-dependencies]
eval = ["mlflow>=2.0"]
all = ["apx-agent[eval]"]

[dependency-groups]
dev = ["uvicorn[standard]>=0.34.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/apx_agent"]

[tool.apx.agent]
name = "apx-agent"
description = "Example agent"
model = "databricks-meta-llama-3-3-70b-instruct"
